Bug 66745 - Fontwork not anti-aliased and with irritating rendering artifacts on >200% zoom
Summary: Fontwork not anti-aliased and with irritating rendering artifacts on >200% zoom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1 target:...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-07-09 16:47 UTC by moray33
Modified: 2013-08-13 17:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (294.29 KB, application/vnd.oasis.opendocument.text)
2013-07-09 16:47 UTC, moray33
Details
Screenshot 4.1.0.4 (251.86 KB, image/jpeg)
2013-07-26 15:57 UTC, moray33
Details

Note You need to log in before you can comment on or make changes to this bug.
Description moray33 2013-07-09 16:47:44 UTC
Created attachment 82241 [details]
Example document

I couldn't say why this happens, but today I opened a document that a year ago (it had to be LibreOffice 3.5) looked fine (in the screen and printed) but now it has the borders of the Fontwork characters distorsionated.
I tried to reduce the width of the borders and it seemed they were fine, until I printed the document and in the paper appeared the distorsion.

If I export the document to PDF, it looks fine, the distorsion dissapears everywhere.

I attach the document and I hope you can find the cause of this issue.
Operating System: All
Version: 4.0.2.2 release
Last worked in: 3.5 all versions
Comment 1 Michael Stahl 2013-07-12 17:26:33 UTC
it appears the FontWork stuff is not anti-aliased, which
surprisingly is a regression from:

commit 5913506b2193e93ca2767ab7365ab2e76ed7848f
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Wed Apr 4 22:35:08 2012 +0200

    fdo#45562: paint borders in SwFlyFrm::Paint:

the real problem however appears to be that the VclPixelProcessor2D
(of which a temporary instance is created in the above commit)
does not properly restore the anti-aliasing mode to what it was before.

fixed on master.
Comment 2 Commit Notification 2013-07-12 17:30:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=420aa16af0bbab4bdef80ceeb8d44cabe65840e0

fdo#66745: drawinglayer: properly restore anti-aliasing mode



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 moray33 2013-07-12 17:57:50 UTC
Thanks! In which version will be fixed?
Comment 4 retired 2013-07-13 15:04:21 UTC
BSA target:4.2.0
Comment 5 Commit Notification 2013-07-13 17:34:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56ed1221d4d578260d9e20715d073b70a099efa4&h=libreoffice-4-1

fdo#66745: drawinglayer: properly restore anti-aliasing mode


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-07-15 11:27:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=99cf5f9b1ca3471ee9d9b869127dbfc355418054&h=libreoffice-4-1-0

fdo#66745: drawinglayer: properly restore anti-aliasing mode


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 moray33 2013-07-26 14:50:55 UTC
I have to say I tried today with the same document I attached here as example (and another one) and the issue persists.
Comment 8 moray33 2013-07-26 14:51:20 UTC
In LO 4.1.0, I forgot to say it.
Comment 9 Michael Stahl 2013-07-26 15:34:48 UTC
hmmm... here the document looks the same in 4.1.0.4 as in 3.4.6.

does the document look different for you in 4.1.0.4 than in 4.0.x?

what OS are you using?

can you check that you have this enabled:

 Tools->Options, LibreOffice, View, "Use Anti-Aliasing"

can you attach screenshots that show current 4.1.0.4 and a
LO version that works for you?
Comment 10 moray33 2013-07-26 15:57:59 UTC
Created attachment 83041 [details]
Screenshot 4.1.0.4
Comment 11 moray33 2013-07-26 16:03:42 UTC
I think it looks the same in 4.1 and 4.0. I don't have installed the 4.0 version to say if it looks exactly the same but I have the same issue.

It happens in Windows XP and 7 (I haven't tried the 4.1 version in Linux yet because it's not updated in the repositories).

I can't remember the exact version where this worked fine but, as I side, it must be around 3.5, it was a year ago.

I have enabled "Use Anti-Aliasing".

And I attached a screenshot. It's with 200% zoom. I can't see the distorsion with 100 or 150% zoom, but I do with 200% and, most important, the distorsion appears when I print the document (but if I export it to PDF, it looks good in the screen and printed).
Comment 12 Michael Stahl 2013-07-27 22:33:40 UTC
ah now i see the other problem too, and it is far more annoying!

it was already fixed on master by commit 744244997da79ca95278249eeadf716730fffd82

apparently it was introduced by some merge from AOO, as the fix
is also from AOO and AOO 3.4.0 has the same bug; will try to
get the fix into 4.0/4.1 branches.

there is the bug 60282 about the same problem, but since
i've fixed an additional anti-aliasing issue here i won't resolve
this as duplicate.