drawinglayer/source/processor2d/vclpixelprocessor2d.hxx
@@ -25,6 +25,8 @@
 #include "vclprocessor2d.hxx"
 #include <vcl/outdev.hxx>
 
+#include <boost/scoped_ptr.hpp>
+
 //////////////////////////////////////////////////////////////////////////////
 // predefines
 
@@ -49,6 +51,9 @@ namespace drawinglayer
         class VclPixelProcessor2D : public VclProcessor2D
         {
         private:
+            struct Impl;
+            boost::scoped_ptr<Impl> m_pImpl;
+
         protected:
             /*  the local processor for BasePrinitive2D-Implementation based primitives,
                 called from the common process()-implementation
